--- a/RegistroClientes/index.html
+++ b/RegistroClientes/index.html
@@ -162,6 +162,7 @@
     <!--TABLA Y BUSCAR CLIENTE-->
     <div class="container">
       <div class="row m-2">
+        <!--BARRA BUSQUEDA-->
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div class="BuscarCliente">
             <div class="BarraBuscar">
@@ -170,19 +171,23 @@
                 type="text"
                 placeholder="BUSCAR CLIENTE"
                 aria-label="default input example"
+                id="input-busqueda"
               />
             </div>
-            <div class="ImgBuscar">
+            <div class="ImgBuscar" id="btn-buscar">
               <input type="image" src="Buscar.png" class="imgBuscar" />
             </div>
           </div>
         </div>
+        <!--TABLA DE DATOS DE CLIENTES-->
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
           <div
             class="table-responsive border"
             style="max-height: 400px; overflow-y: auto"
           >
-            <table class="table table-striped table-hover text-center">
+            <table
+              class="table table-bordered table-striped table-hover text-center"
+            >
               <thead class="table-dark sticky-header">
                 <tr>
                   <th>N°</th>
@@ -215,6 +220,8 @@
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <script src="clientes.js"></script>
   </body>
 </html>
