--- a/AreaAdministracion/index.html
+++ b/AreaAdministracion/index.html
@@ -36,7 +36,7 @@
               border: 6px solid #AAA;
           ">
               <input type="file" name="foto" id="foto" accept="image/*">
-              <label for="foto">Cambiar foto</label>
+              <button oneclick="uploadImage()">Subir imagen</button>
             </div>
             <div class="text-center">
               <button class="btn btn-primary">Guardar</button>
